--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  backgrond-color: #282c34;
+  min-height: 100vh;
 }
 
 .App-logo {
@@ -14,14 +16,17 @@
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.days {
+  display: flex;
+  justify-content: center;
 }
 
 .App-link {
