--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,80 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
+.slide {
+  font-size: 20px;
+  font-weight: 200;
+  letter-spacing: 1px;
+  display:flex;
+  align-items:center;
+  outline: 0;
+  border: 2px solid #ffc107;
+  cursor: pointer;
+  position: relative;
+  background-color: #F7CA18;
+}
+
+.slide-left{
+  padding-right: 16px;
+}
+.slide-right{
+  padding-left: 16px;
+}
+.slide i {
+  opacity: 0;
+  font-size: 13px;
+  transition: 0.2s;
+}
+
+.slide span {
+  transition: transform 0.8s;
+}
+
+.slide:hover span {
+  transform: translateX(-6px);
+}
+
+.slide:hover i {
+  opacity: 1;
+  transform: translateX(-6px);
+}
+/* End of Slide div  */
+.animated-button {
+	background: cornsilk;
+	width:48px;
+	height:48px;
+	color: #fff;
+	cursor: pointer;
+  color:green;
+	display: block;
+	position: relative;
+	border: 1px solid #ffc107;
+  border-radius:50%;
+	transition: all 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
+.animated-button:hover {
+	color: #000 !important;
+	background-color: transparent;
+}
+
+
+.animated-button:hover:before {
+	top: 0%;
+	bottom: auto;
+	height: 100%;
+}
+.animated-button:before {
+	display: block;
+  border-radius:50%;
+	position: absolute;
+	left: 0px;
+	bottom: 0px;
+	height: 0px;
+	width: 100%;
+	z-index: -1;
+	content: '';
+	background: #F7CA18;
+	transition: all 0.7s cubic-bezier(0.215, 0.61, 0.355, 1) 0s;
+}
