--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,6 @@
 .App {
   text-align: center;
-  background-color: #282c34;
   min-height: 100vh;
-  color: #fff;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
 
 .App-header {
@@ -22,7 +9,6 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
 }
 
 .days {
@@ -30,21 +16,19 @@
   justify-content: center;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 .calendar {
   display: block;
   width: 600px;
   margin: auto;
   padding: 8px;
-  border: 1px solid #fff;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 .calendar_head {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+}
+.calendar_body{
 }
 .calendar__days {
   display: flex;
@@ -59,11 +43,18 @@
   align-items: center;
 }
 
+.calendar__day span{
+  display:block;
+}
+
+
 .calendar__active {
-  background-color: grey;
+  background-color: #F7CA18;
   border-radius: 50%;
 }
+
 .calendar__today {
-  background-color: green;
+  background-color: #f0f8ff;
   border-radius: 50%;
 }
+
